# tox-rye

./: .gitignore  LICENSE-MIT  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
src/tox_rye/: plugin.py
